# lead-generation-agent

./: .dockerignore  .env.docker  .env.example  .gitignore  API_DOCUMENTATION.md  API_ENDPOINTS_TEST_GUIDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  finalization.py  health.py  leads.py  lifecycle.py  operations.py  outreach_agent.py  settings.py  webhooks.py
app/core/: config.py  exceptions.py  logging.py
app/modules/discovery/: __init__.py  industry_expander.py  query_builder.py  scraper.py  service.py
app/modules/enrichment/: __init__.py  scraper.py  service.py  summarizer.py
app/modules/filter/: __init__.py  service.py
app/modules/icp/: __init__.py  llm_scorer.py  rules.py  service.py
app/modules/outreach/: __init__.py  agent.py  conversation_manager.py  email_generator.py  email_sanitize.py  generator.py  pain_inference.py  sender_receiver_naming.py  service.py
app/modules/qualification/: buyer_seller_classifier.py
app/modules/quality/: output_quality_validator.py
app/pipeline/: __init__.py  orchestrator.py
app/schemas/: __init__.py  finalization.py  lead.py  lifecycle.py  operations.py  settings.py  user.py
app/services/: auth.py  email_formatter.py  extraction_config.py  extraction_service.py  finalization.py  lifecycle.py  operations.py  sandbox_outreach.py  settings.py  user_config.py  webhooks.py
app/storage/: __init__.py  database.py  models.py  ops_repository.py  repository.py
app/utils/: encryption.py  llm_client.py  prompt_loader.py
frontend/: package-lock.json
frontend/app/: layout.tsx
frontend/app/leads/[leadId]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/outreach/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[runId]/: page.tsx
frontend/app/runs/[runId]/discovered/: page.tsx
frontend/app/runs/new/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/layout/: Shell.tsx
frontend/components/ui/: Badge.tsx  Card.tsx  ErrorMsg.tsx  Spinner.tsx
frontend/lib/: api.ts  auth.ts
models/: lead.py
prompts/: conversation_reply.txt  conversation_summarize.txt  enrichment_summarize.txt  icp_score.txt  meeting_extraction.txt  outreach_draft.txt  pain_inference.txt
scripts/: create_api_user.py  seed_sandbox_inbox.py
services/: email_generator.py  lead_enrichment.py  scraping_orchestrator.py
tests/: test_buyer_seller.py  test_discovery_sanity.py  test_finalization.py  test_lifecycle.py  test_operations.py  test_output_quality.py  test_pipeline_contracts.py  test_pipeline_schemas.py  test_query_builder.py
