[tool.poetry]
name = "ksa-lead-gen"
version = "1.0.0"
description = "Phase 1 — Precision B2B lead generation for KSA Business Transformation Consulting"
authors = ["KSA Lead Gen Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"
httpx = ">=0.27.0"
playwright = ">=1.44.0"
beautifulsoup4 = ">=4.12.0"
lxml = ">=5.2.0"
openai = ">=1.30.0"
structlog = ">=24.1.0"
sqlmodel = ">=0.0.18"
aiosqlite = ">=0.20.0"
asyncpg = ">=0.29.0"
tenacity = ">=8.3.0"
python-dotenv = ">=1.0.0"
email-validator = ">=2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
ruff = ">=0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
