[tool.poetry]
name = "ksa-lead-gen"
version = "1.0.0"
description = "Phase 1 — Precision B2B lead generation for KSA Business Transformation Consulting"
authors = ["KSA Lead Gen Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"

# ── Web Framework ─────────────────────────────────────────────────────────────
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
python-multipart = "^0.0.28"

# ── Validation + Config ───────────────────────────────────────────────────────
pydantic = { version = "^2.13.3", extras = ["email"] }
pydantic-settings = ">=2.2.0"
email-validator = ">=2.1.0"

# ── HTTP Client ───────────────────────────────────────────────────────────────
httpx = ">=0.27.0"

# ── Web Scraping ──────────────────────────────────────────────────────────────
playwright = ">=1.40.0"
beautifulsoup4 = ">=4.12.0"
lxml = ">=5.2.0"
html2text = ">=2024.1.16"

# ── LLM + AI ──────────────────────────────────────────────────────────────────
openai = ">=1.30.0"

# ── Logging ───────────────────────────────────────────────────────────────────
structlog = ">=24.1.0"

# ── Database ──────────────────────────────────────────────────────────────────
sqlmodel = ">=0.0.18"
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.29.0"
psycopg2-binary = ">=2.9.0"

# ── Async + Utilities ─────────────────────────────────────────────────────────
aiosqlite = ">=0.20.0"
tenacity = ">=8.3.0"
python-dotenv = ">=1.0.0"

# ── Auth + Security (use cryptography, NOT pycrypto) ──────────────────────────
passlib = { version = ">=1.7.4", extras = ["bcrypt"] }
bcrypt = ">=4.1.0"
python-jose = { version = ">=3.3.0", extras = ["cryptography"] }
cryptography = ">=42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.4.0"
black = ">=24.1.0"
mypy = ">=1.8.0"
types-beautifulsoup4 = ">=4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "W", "I001"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
